force-app/main/default/objects/PriceLevelSurcharge__c/PriceLevelSurcharge__c.object-meta.xml
<CustomObject>
    <description>To store and edit the CO2 surcharge for the price level 1 creation</description>
    <label>Price Level Surcharge</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Level Surcharges</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>