force-app/main/default/objects/PriceLevelSurcharge__c/fields/BusinessSubgroup__c.field-meta.xml
<CustomField>
    <fullName>BusinessSubgroup__c</fullName>
    <label>Product Group Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>BusinessSubgroup</valueSetName>
    </valueSet>
</CustomField>