force-app/main/default/objects/PriceLevelSurcharge__c/fields/PriceLevel__c.field-meta.xml
<CustomField>
    <fullName>PriceLevel__c</fullName>
    <label>Price Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2c</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>Orientation Price</fullName>
            </value>
            <value>
                <fullName>2b</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>