force-app/main/default/objects/PriceLevelSurcharge__c/fields/SizeFrom__c.field-meta.xml
<CustomField>
    <fullName>SizeFrom__c</fullName>
    <label>Size From</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>