force-app/main/default/objects/PriceLevelSurcharge__c/fields/SizeTo__c.field-meta.xml
<CustomField>
    <fullName>SizeTo__c</fullName>
    <label>Size To</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>