force-app/main/default/objects/PriceLevelSurcharge__c/validationRules/ValidationForBusinessSubGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForBusinessSubGroup</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( BusinessArea__c, &quot;ZZ&quot; ),
ISBLANK( TEXT( BusinessSubgroup__c ) ),
NOT( $Setup.ByPassLogic__c.ByPassValidation__c )
)</errorConditionFormula>
    <errorDisplayField>BusinessSubgroup__c</errorDisplayField>
    <errorMessage>Please enter a value for product group business area since the business area selected is drawing grades and requires further segmentation.</errorMessage>
</ValidationRule>